--- a/university-portal/package.json
+++ b/university-portal/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
     "next": "15.5.0",
